--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                         <h6 lang="es-ES">Universidad Nacional de Educación a Distancia</h6>
                         <ol>
                             <li>
-                                <a data-i18n-attr="aria-label:studies.uned.access.aria-label" data-i18n="studies.uned.access.html" class="modal-link" href="doc/accesoUNED_gonzalo.pdf" target="_blank" data-modal="doc/accesoUNED_gonzalo.pdf" aria-label="See certificate">Access to university</a>
+                                <a data-i18n-attr="aria-label:studies.uned.access.aria-label" data-i18n="studies.uned.access.text" class="modal-link" href="doc/accesoUNED_gonzalo.pdf" target="_blank" data-modal="doc/accesoUNED_gonzalo.pdf" aria-label="See certificate">Access to university</a>
                             </li>
                         </ol>
                     </article>
