--- a/fallbacks/dark/index.es.html
+++ b/fallbacks/dark/index.es.html
@@ -258,7 +258,7 @@
                         <picture>
                             <source type="image/webp" srcset="img/photos/gonzalo@1x.webp 1x, img/photos/gonzalo@2x.webp 2x, img/photos/gonzalo@3x.webp 3x"> <!-- WEBP SOURCES -->
                             <source type="image/png" srcset="img/photos/gonzalo@1x.png 1x, img/photos/gonzalo@2x.png 2x, img/photos/gonzalo@3x.png 3x"> <!-- PNG FALLBACK -->
-                            <img data-i18n-attr="alt:gonzalo" src="img/photos/gonzalo@3x.png" fetchpriority="high" decoding="async" loading="eager" alt="Retrato de Gonzalo Cabezas"> <!-- FALLBACK IMG (LAST RESORT) -->
+                            <img data-i18n-attr="alt:gonzalo" src="img/photos/gonzalo@3x.png" fetchpriority="high" decoding="sync" loading="eager" alt="Retrato de Gonzalo Cabezas"> <!-- FALLBACK IMG (LAST RESORT) -->
                         </picture>
                         <figcaption>
                             <h1 lang="es-ES">Gonzalo Cabezas Núñez</h1>
@@ -361,7 +361,7 @@
                         <noscript> <!-- FALLBACK -->
                             <ol id="carousel-fallback" class="carousel-track">
                                 <li>
-                                    <img src="img/carousel/FRONT-END_certificate@3x.png" fetchpriority="high" decoding="async" loading="eager" alt="Certificado de Front-End">
+                                    <img src="img/carousel/FRONT-END_certificate@3x.png" fetchpriority="high" decoding="sync" loading="eager" alt="Certificado de Front-End">
                                 </li>
                                 <li>
                                     <img src="img/carousel/WEB-DEV_certificate@3x.png" decoding="async" loading="lazy" alt="Certificado de desarrollo Web">
