--- a/fallbacks/light/index.ca.html
+++ b/fallbacks/light/index.ca.html
@@ -263,7 +263,7 @@
                         <figcaption>
                             <h1 lang="es-ES">Gonzalo Cabezas Núñez</h1>
                             <h2 data-i18n="profile">Desenvolupador <span lang="en-GB">Frontend</span> en transició a <span lang="en-GB">Fullstack</span></h2>
-                            <p data-i18n="biography">M'obsesiona el codi net i funcional. Em formo a diari, tant en academies com per lliure, perquè el coneixement no s'acaba quan sona el timbre. M'agrada trencar coses per entendre-les (i arreglar-les millor), per això el <span lang="en-GB">Red Team</span> em crida fort. No segueixo el camí estàndard; prefereixo traçar el meu amb teclat i cafè. Busco projectes on pugui aprendre, aportar i deixar empremta, sense postureigs ni promeses buides. Si no sé alguna cosa, la investigo. I si alguna cosa em motiva, no paro fins a fer-ho bé.</p>
+                            <p data-i18n="biography">M'apassiona el codi net i funcional. Em formo a diari, tant en academies com per lliure, perquè el coneixement no s'acaba quan sona el timbre. M'agrada trencar coses per entendre-les (i arreglar-les millor), per això el <span lang="en-GB">Red Team</span> em crida fort. No segueixo el camí estàndard; prefereixo traçar el meu amb teclat i cafè. Busco projectes on pugui aprendre, aportar i deixar empremta, sense postureigs ni promeses buides. Si no sé alguna cosa, la investigo. I si alguna cosa em motiva, no paro fins a fer-ho bé.</p>
                         </figcaption>
                     </figure>
                 </section>
