--- a/private/fallbacks/light/index.ca-ES.html
+++ b/private/fallbacks/light/index.ca-ES.html
@@ -6,14 +6,14 @@
     <meta charset="utf-8">
 
     <!-- BASE PATH FOR RELATIVE URL RESOLUTION -->
-    <base href="/cv/">
+    <base href="/00_CV">
 
     <!-- RESPONSIVE VIEWPORT SETTINGS -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
     <!-- TITLE & META DESCRIPTION FOR SEO -->
     <title data-i18n="title">Gonzalo Cabezas | Desenvolupador Frontend web</title>
-    <meta name="description" content="Portfolio i CV de Gonzalo Cabezas, desenvolupador Frontend especialitzat en tecnologies web modernes">
+    <meta name="description" content="Portafoli i CV de Gonzalo Cabezas, desenvolupador Frontend especialitzat en tecnologies web modernes">
 
     <!-- CANONICAL URL -->
     <link rel="canonical" href="https://sandokan.cat/">
@@ -25,7 +25,7 @@
     <link rel="alternate" hreflang="x-default" href="https://sandokan.cat/">
 
     <!-- KEYWORDS FOR SEARCH ENGINES -->
-    <meta name="keywords" content="Gonzalo Cabezas Núñez, sandokan.cat, Sandokan, Frontend dev, Desenvolupador Front-End web, Desenvolupador Frontend web, Desenvolupador web Barcelona, Desenvolupador web junior, Portfolio web, Curriculum Vitae">
+    <meta name="keywords" content="Gonzalo Cabezas Núñez, sandokan.cat, Sandokan, Frontend dev, Desenvolupador Front-End web, Desenvolupador Frontend web, Desenvolupador web Barcelona, Desenvolupador web junior, Portafoli web, Curriculum Vitae">
 
     <!-- ROBOTS & INDEXING -->
     <meta name="robots" content="index, follow">
@@ -41,7 +41,7 @@
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="200">
     <meta property="og:image:height" content="200">
-    <meta property="og:image:alt" content="Gonzalo Cabezas | Desenvolupador Frontend web, CV i Portfolio">
+    <meta property="og:image:alt" content="Gonzalo Cabezas | Desenvolupador Frontend web, CV i portafoli">
     <meta property="og:locale" content="ca_ES">
     <meta property="og:article:section" content="Tecnologia, Desenvolupament Web">
     <meta property="og:article:tag" content="Desenvolupador Frontend">
@@ -103,7 +103,7 @@
             "@type": "WebSite",
             "url": "https://sandokan.cat/",
             "name": "sandokan.cat | Desenvolupador Front-End Web",
-            "description": "Desenvolupador Front-End especialitzat en tecnologies web modernes. Portfolio i CV"
+            "description": "Desenvolupador Front-End especialitzat en tecnologies web modernes. Portafoli i CV"
         }
     </script>
     <script type="application/ld+json"> // MARKUP FOR THE WEBPAGE CONTENT
@@ -455,7 +455,7 @@
                 </section>
                 <section>
                     <div class="others">
-                        <h4 lang="en-GB">Portfolio</h4>
+                        <h4 lang="ca-ES">Portafoli</h4>
                         <!-- DROPDOWN MENU -->
                         <noscript> <!-- FALLBACK -->
                             <aside id="menu-fallback">
