--- a/private/fallbacks/light/index.es-ES.html
+++ b/private/fallbacks/light/index.es-ES.html
@@ -6,14 +6,14 @@
     <meta charset="utf-8">
 
     <!-- BASE PATH FOR RELATIVE URL RESOLUTION -->
-    <base href="/cv/">
+    <base href="/00_CV">
 
     <!-- RESPONSIVE VIEWPORT SETTINGS -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
     <!-- TITLE & META DESCRIPTION FOR SEO -->
     <title data-i18n="title">Gonzalo Cabezas | Desarrollador Frontend web</title>
-    <meta name="description" content="Portfolio y CV de Gonzalo Cabezas, desarrollador Frontend especializado en tecnologías web modernas">
+    <meta name="description" content="Portafolio y CV de Gonzalo Cabezas, desarrollador Frontend especializado en tecnologías web modernas">
 
     <!-- CANONICAL URL -->
     <link rel="canonical" href="https://sandokan.cat/">
@@ -25,7 +25,7 @@
     <link rel="alternate" hreflang="x-default" href="https://sandokan.cat/">
 
     <!-- KEYWORDS FOR SEARCH ENGINES -->
-    <meta name="keywords" content="Gonzalo Cabezas Núñez, sandokan.cat, Sandokan, Frontend dev, Desarrollador Front-End web, Desarrollador Frontend web, Desarrollador web Barcelona, Desarrollador web junior, Portfolio web, Curriculum Vitae">
+    <meta name="keywords" content="Gonzalo Cabezas Núñez, sandokan.cat, Sandokan, Frontend dev, Desarrollador Front-End web, Desarrollador Frontend web, Desarrollador web Barcelona, Desarrollador web junior, Portafolio web, Curriculum Vitae">
 
     <!-- ROBOTS & INDEXING -->
     <meta name="robots" content="index, follow">
@@ -41,7 +41,7 @@
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="200">
     <meta property="og:image:height" content="200">
-    <meta property="og:image:alt" content="Gonzalo Cabezas | Desarrollador Frontend web, CV y Portfolio">
+    <meta property="og:image:alt" content="Gonzalo Cabezas | Desarrollador Frontend web, CV y portafolio">
     <meta property="og:locale" content="es_ES">
     <meta property="og:article:section" content="Tecnología, desarrollo web">
     <meta property="og:article:tag" content="Desarrollador Frontend">
@@ -103,7 +103,7 @@
             "@type": "WebSite",
             "url": "https://sandokan.cat/",
             "name": "sandokan.cat | Desarrollador Front-End Web",
-            "description": "Desarrollador Front-End especializado en tecnologías web modernas. Portfolio y CV"
+            "description": "Desarrollador Front-End especializado en tecnologías web modernas. Portafolio y CV"
         }
     </script>
     <script type="application/ld+json"> // MARKUP FOR THE WEBPAGE CONTENT
@@ -455,7 +455,7 @@
                 </section>
                 <section>
                     <div class="others">
-                        <h4 lang="en-GB">Portfolio</h4>
+                        <h4 lang="es-ES">Portafolio</h4>
                         <!-- DROPDOWN MENU -->
                         <noscript> <!-- FALLBACK -->
                             <aside id="menu-fallback">
