--- a/private/fallbacks/light/index.ca-ES.html
+++ b/private/fallbacks/light/index.ca-ES.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
 
     <!-- BASE PATH FOR RELATIVE URL RESOLUTION -->
-    <base href="/cv/">
+    <base href="/cv">
 
     <!-- RESPONSIVE VIEWPORT SETTINGS -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
@@ -455,7 +455,7 @@
                 </section>
                 <section>
                     <div class="others">
-                        <h4 lang="ca-ES">Portafoli</h4>
+                        <h4 data-i18n="portfolio">Portafoli</h4>
                         <!-- DROPDOWN MENU -->
                         <noscript> <!-- FALLBACK -->
                             <aside id="menu-fallback">
