--- a/private/fallbacks/dark/index.ca-ES.html
+++ b/private/fallbacks/dark/index.ca-ES.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
 
     <!-- BASE PATH FOR RELATIVE URL RESOLUTION -->
-    <base href="/cv">
+    <base href="/cv/">
 
     <!-- RESPONSIVE VIEWPORT SETTINGS -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
